# qbsdiff

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: test.yml
benches/: invoke.rs
cmd/: qbsdiff.rs  qbspatch.rs
src/: bsdiff.rs  bspatch.rs  lib.rs  utils.rs
src/search/: mod.rs  tests.rs
tests/: common.rs  compat.rs  compatible.rs  inverse.rs  invertible.rs  parallel_compatible.rs  parallel_invertible.rs  random_compat.rs  sample_compat.rs
tests/common/: mod.rs
tests/compat-data/: depth.s  depth.t  fselect.s  fselect.t  rg.s
utils/: Cargo.toml  README.md
utils/src/: lib.rs
