[package]
name = "qbsdiff"
version = "1.3.1"
authors = ["hucsmn <hucsmn@hotmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["bsdiff", "delta"]
homepage = "https://github.com/hucsmn/qbsdiff"
repository = "https://github.com/hucsmn/qbsdiff"
exclude = ["/assets"]
description = "Fast and memory saving bsdiff 4.x compatible delta compressor and patcher."

[dependencies]
bzip2 = "0.3"
byteorder = "1.3"
rayon = "1.3"
suffix_array = "0.5"
clap = { optional = true, version = "2.33" }

[dev-dependencies]
qbsdiff_test_bench_utils = { version ="0.1", path = "utils" }
criterion = "0.3"

[features]
default = []
cmd = ["clap"]

[[bin]]
name = "qbsdiff"
path = "cmd/qbsdiff.rs"
required-features = ["cmd"]

[[bin]]
name = "qbspatch"
path = "cmd/qbspatch.rs"
required-features = ["cmd"]

[[bench]]
name = "invoke"
harness = false
