[package]
name = "qbsdiff"
version = "1.4.1"
authors = ["hucsmn <hucsmn@hotmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["bsdiff", "delta"]
homepage = "https://github.com/hucsmn/qbsdiff"
repository = "https://github.com/hucsmn/qbsdiff"
exclude = ["/assets"]
description = "Fast and memory saving bsdiff 4.x compatible delta compressor and patcher."

[dependencies]
byteorder = "1.5"
bzip2 = "0.4.4"
clap = { optional = true, version = "4.5", features = ["derive"] }
rayon = "1.10"
suffix_array = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
qbsdiff_test_bench_utils = { version = "0.1", path = "utils" }

[features]
default = []
cmd = ["dep:clap"]

[[bin]]
name = "qbsdiff"
path = "cmd/qbsdiff.rs"
required-features = ["cmd"]

[[bin]]
name = "qbspatch"
path = "cmd/qbspatch.rs"
required-features = ["cmd"]

[[bench]]
name = "invoke"
harness = false
