[workspace]
members = [".", "utils"]
default-members = [".", "utils"]

[package]
name = "qbsdiff"
version = "1.4.1"
authors = ["hucsmn <hucsmn@hotmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["bsdiff", "delta"]
homepage = "https://github.com/hucsmn/qbsdiff"
repository = "https://github.com/hucsmn/qbsdiff"
exclude = ["/assets"]
description = "Fast and memory saving bsdiff 4.x compatible delta compressor and patcher."

[dependencies]
bzip2 = "0.4.4"
byteorder = "1.4"
rayon = "1.5"
suffix_array = "0.5"
clap = { optional = true, version = "3.2", features = ["derive"] }

[dev-dependencies]
qbsdiff_test_bench_utils = { version = "0.1", path = "utils" }
criterion = { version = "0.3", features = ["html_reports"] }

[features]
default = []
cmd = ["clap"]

[[bin]]
name = "qbsdiff"
path = "cmd/qbsdiff.rs"
required-features = ["cmd"]

[[bin]]
name = "qbspatch"
path = "cmd/qbspatch.rs"
required-features = ["cmd"]

[[bench]]
name = "invoke"
harness = false
