[package]
name = "qbsdiff_test_bench_utils"
version = "0.1.0"
authors = ["hucsmn <hucsmn@hotmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hucsmn/qbsdiff"
description = "private utilities of the qbsdiff crate for tests and benchmarks"

[dependencies]
qbsdiff = { version ="*", path = ".." }
globwalk = "0.7"
rand = "0.7"
chrono = "0.4"
