[package]
name = "qbsdiff_test_bench_utils"
version = "0.1.3"
authors = ["hucsmn <hucsmn@hotmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hucsmn/qbsdiff"
description = "private utilities of the qbsdiff crate for tests and benchmarks"

[dependencies]
chrono = "0.4"
globwalk = "0.9"
qbsdiff = { version = "1", path = ".." }
rand = "0.8"
